api_reference/0.4.0/langchain/_sources/core_api_reference.rst.txt
.. core_api_reference:

=======================
``langchain_core`` API Reference
=======================

:mod:`langchain_core.agents`
=============================

.. automodule:: langchain_core.agents
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: agents
    :template: pydantic.rst
    
    agents.AgentAction
    
    :template: pydantic.rst
    
    agents.AgentActionMessageLog
    
    :template: pydantic.rst
    
    agents.AgentFinish
    
    :template: pydantic.rst
    
    agents.AgentStep
    
Functions
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: agents
    :template: function.rst

    

:mod:`langchain_core.beta`
===========================

.. automodule:: langchain_core.beta
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: beta
    :template: class.rst
    
    beta.runnables.context.Context
    
    :template: pydantic.rst
    
    beta.runnables.context.ContextGet
    
    :template: pydantic.rst
    
    beta.runnables.context.ContextSet
    
    :template: class.rst
    
    beta.runnables.context.PrefixContext
    
Functions
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: beta
    :template: function.rst

    beta.runnables.context.aconfig_with_context
    beta.runnables.context.config_with_context

:mod:`langchain_core.caches`
=============================

.. automodule:: langchain_core.caches
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: caches
    :template: class.rst
    
    caches.BaseCache
    
:mod:`langchain_core.callbacks`
================================

.. automodule:: langchain_core.callbacks
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: callbacks
    :template: class.rst
    
    callbacks.base.AsyncCallbackHandler
    
    :template: class.rst
    
    callbacks.base.BaseCallbackHandler
    
    :template: class.rst
    
    callbacks.base.BaseCallbackManager
    
    :template: class.rst
    
    callbacks.base.CallbackManagerMixin
    
    :template: class.rst
    
    callbacks.base.ChainManagerMixin
    
    :template: class.rst
    
    callbacks.base.LLMManagerMixin
    
    :template: class.rst
    
    callbacks.base.RetrieverManagerMixin
    
    :template: class.rst
    
    callbacks.base.RunManagerMixin
    
    :template: class.rst
    
    callbacks.base.ToolManagerMixin
    
    :template: class.rst
    
    callbacks.manager.AsyncCallbackManager
    
    :template: class.rst
    
    callbacks.manager.AsyncCallbackManagerForChainGroup
    
    :template: class.rst
    
    callbacks.manager.AsyncCallbackManagerForChainRun
    
    :template: class.rst
    
    callbacks.manager.AsyncCallbackManagerForLLMRun
    
    :template: class.rst
    
    callbacks.manager.AsyncCallbackManagerForRetrieverRun
    
    :template: class.rst
    
    callbacks.manager.AsyncCallbackManagerForToolRun
    
    :template: class.rst
    
    callbacks.manager.AsyncParentRunManager
    
    :template: class.rst
    
    callbacks.manager.AsyncRunManager
    
    :template: class.rst
    
    callbacks.manager.BaseRunManager
    
    :template: class.rst
    
    callbacks.manager.CallbackManager
    
    :template: class.rst
    
    callbacks.manager.CallbackManagerForChainGroup
    
    :template: class.rst
    
    callbacks.manager.CallbackManagerForChainRun
    
    :template: class.rst
    
    callbacks.manager.CallbackManagerForLLMRun
    
    :template: class.rst
    
    callbacks.manager.CallbackManagerForRetrieverRun
    
    :template: class.rst
    
    callbacks.manager.CallbackManagerForToolRun
    
    :template: class.rst
    
    callbacks.manager.ParentRunManager
    
    :template: class.rst
    
    callbacks.manager.RunManager
    
    :template: class.rst
    
    callbacks.stdout.StdOutCallbackHandler
    
    :template: class.rst
    
    callbacks.streaming_stdout.StreamingStdOutCallbackHandler
    
Functions
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: callbacks
    :template: function.rst

    callbacks.manager.ahandle_event
    callbacks.manager.atrace_as_chain_group
    callbacks.manager.handle_event
    callbacks.manager.trace_as_chain_group

:mod:`langchain_core.chat_history`
===================================

.. automodule:: langchain_core.chat_history
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: chat_history
    :template: class.rst
    
    chat_history.BaseChatMessageHistory
    
:mod:`langchain_core.chat_sessions`
====================================

.. automodule:: langchain_core.chat_sessions
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: chat_sessions
    :template: typeddict.rst
    
    chat_sessions.ChatSession
    
:mod:`langchain_core.documents`
================================

.. automodule:: langchain_core.documents
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: documents
    :template: pydantic.rst
    
    documents.base.Document
    
    :template: class.rst
    
    documents.transformers.BaseDocumentTransformer
    
:mod:`langchain_core.embeddings`
=================================

.. automodule:: langchain_core.embeddings
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: embeddings
    :template: class.rst
    
    embeddings.Embeddings
    
:mod:`langchain_core.example_selectors`
========================================

.. automodule:: langchain_core.example_selectors
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: example_selectors
    :template: class.rst
    
    example_selectors.base.BaseExampleSelector
    
    :template: pydantic.rst
    
    example_selectors.length_based.LengthBasedExampleSelector
    
    :template: pydantic.rst
    
    example_selectors.semantic_similarity.MaxMarginalRelevanceExampleSelector
    
    :template: pydantic.rst
    
    example_selectors.semantic_similarity.SemanticSimilarityExampleSelector
    
Functions
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: example_selectors
    :template: function.rst

    example_selectors.semantic_similarity.sorted_values

:mod:`langchain_core.exceptions`
=================================

.. automodule:: langchain_core.exceptions
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: exceptions
    :template: class.rst
    
    exceptions.LangChainException
    
    :template: class.rst
    
    exceptions.OutputParserException
    
    :template: class.rst
    
    exceptions.TracerException
    
:mod:`langchain_core.language_models`
======================================

.. automodule:: langchain_core.language_models
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: language_models
    :template: pydantic.rst
    
    language_models.base.BaseLanguageModel
    
    :template: pydantic.rst
    
    language_models.chat_models.BaseChatModel
    
    :template: pydantic.rst
    
    language_models.chat_models.SimpleChatModel
    
    :template: pydantic.rst
    
    language_models.llms.BaseLLM
    
    :template: pydantic.rst
    
    language_models.llms.LLM
    
Functions
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: language_models
    :template: function.rst

    language_models.chat_models.agenerate_from_stream
    language_models.chat_models.generate_from_stream
    language_models.llms.create_base_retry_decorator
    language_models.llms.get_prompts
    language_models.llms.update_cache

:mod:`langchain_core.load`
===========================

.. automodule:: langchain_core.load
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: load
    :template: class.rst
    
    load.load.Reviver
    
    :template: typeddict.rst
    
    load.serializable.BaseSerialized
    
    :template: pydantic.rst
    
    load.serializable.Serializable
    
    :template: typeddict.rst
    
    load.serializable.SerializedConstructor
    
    :template: typeddict.rst
    
    load.serializable.SerializedNotImplemented
    
    :template: typeddict.rst
    
    load.serializable.SerializedSecret
    
Functions
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: load
    :template: function.rst

    load.dump.default
    load.dump.dumpd
    load.dump.dumps
    load.load.load
    load.load.loads
    load.serializable.to_json_not_implemented
    load.serializable.try_neq_default

:mod:`langchain_core.memory`
=============================

.. automodule:: langchain_core.memory
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: memory
    :template: pydantic.rst
    
    memory.BaseMemory
    
:mod:`langchain_core.messages`
===============================

.. automodule:: langchain_core.messages
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: messages
    :template: pydantic.rst
    
    messages.ai.AIMessage
    
    :template: pydantic.rst
    
    messages.ai.AIMessageChunk
    
    :template: pydantic.rst
    
    messages.base.BaseMessage
    
    :template: pydantic.rst
    
    messages.base.BaseMessageChunk
    
    :template: pydantic.rst
    
    messages.chat.ChatMessage
    
    :template: pydantic.rst
    
    messages.chat.ChatMessageChunk
    
    :template: pydantic.rst
    
    messages.function.FunctionMessage
    
    :template: pydantic.rst
    
    messages.function.FunctionMessageChunk
    
    :template: pydantic.rst
    
    messages.human.HumanMessage
    
    :template: pydantic.rst
    
    messages.human.HumanMessageChunk
    
    :template: pydantic.rst
    
    messages.system.SystemMessage
    
    :template: pydantic.rst
    
    messages.system.SystemMessageChunk
    
    :template: pydantic.rst
    
    messages.tool.ToolMessage
    
    :template: pydantic.rst
    
    messages.tool.ToolMessageChunk
    
Functions
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: messages
    :template: function.rst

    messages.base.merge_content
    messages.base.message_to_dict
    messages.base.messages_to_dict

:mod:`langchain_core.output_parsers`
=====================================

.. automodule:: langchain_core.output_parsers
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: output_parsers
    :template: pydantic.rst
    
    output_parsers.base.BaseGenerationOutputParser
    
    :template: class.rst
    
    output_parsers.base.BaseLLMOutputParser
    
    :template: pydantic.rst
    
    output_parsers.base.BaseOutputParser
    
    :template: pydantic.rst
    
    output_parsers.list.CommaSeparatedListOutputParser
    
    :template: pydantic.rst
    
    output_parsers.list.ListOutputParser
    
    :template: pydantic.rst
    
    output_parsers.list.MarkdownListOutputParser
    
    :template: pydantic.rst
    
    output_parsers.list.NumberedListOutputParser
    
    :template: pydantic.rst
    
    output_parsers.string.StrOutputParser
    
    :template: pydantic.rst
    
    output_parsers.transform.BaseCumulativeTransformOutputParser
    
    :template: pydantic.rst
    
    output_parsers.transform.BaseTransformOutputParser
    
:mod:`langchain_core.outputs`
==============================

.. automodule:: langchain_core.outputs
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: outputs
    :template: pydantic.rst
    
    outputs.chat_generation.ChatGeneration
    
    :template: pydantic.rst
    
    outputs.chat_generation.ChatGenerationChunk
    
    :template: pydantic.rst
    
    outputs.chat_result.ChatResult
    
    :template: pydantic.rst
    
    outputs.generation.Generation
    
    :template: pydantic.rst
    
    outputs.generation.GenerationChunk
    
    :template: pydantic.rst
    
    outputs.llm_result.LLMResult
    
    :template: pydantic.rst
    
    outputs.run_info.RunInfo
    
:mod:`langchain_core.prompt_values`
====================================

.. automodule:: langchain_core.prompt_values
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: prompt_values
    :template: pydantic.rst
    
    prompt_values.ChatPromptValue
    
    :template: pydantic.rst
    
    prompt_values.ChatPromptValueConcrete
    
    :template: pydantic.rst
    
    prompt_values.PromptValue
    
    :template: pydantic.rst
    
    prompt_values.StringPromptValue
    
:mod:`langchain_core.prompts`
==============================

.. automodule:: langchain_core.prompts
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: prompts
    :template: pydantic.rst
    
    prompts.base.BasePromptTemplate
    
    :template: pydantic.rst
    
    prompts.chat.AIMessagePromptTemplate
    
    :template: pydantic.rst
    
    prompts.chat.BaseChatPromptTemplate
    
    :template: pydantic.rst
    
    prompts.chat.BaseMessagePromptTemplate
    
    :template: pydantic.rst
    
    prompts.chat.BaseStringMessagePromptTemplate
    
    :template: pydantic.rst
    
    prompts.chat.ChatMessagePromptTemplate
    
    :template: pydantic.rst
    
    prompts.chat.ChatPromptTemplate
    
    :template: pydantic.rst
    
    prompts.chat.HumanMessagePromptTemplate
    
    :template: pydantic.rst
    
    prompts.chat.MessagesPlaceholder
    
    :template: pydantic.rst
    
    prompts.chat.SystemMessagePromptTemplate
    
    :template: pydantic.rst
    
    prompts.few_shot.FewShotChatMessagePromptTemplate
    
    :template: pydantic.rst
    
    prompts.few_shot.FewShotPromptTemplate
    
    :template: pydantic.rst
    
    prompts.few_shot_with_templates.FewShotPromptWithTemplates
    
    :template: pydantic.rst
    
    prompts.pipeline.PipelinePromptTemplate
    
    :template: pydantic.rst
    
    prompts.prompt.PromptTemplate
    
    :template: pydantic.rst
    
    prompts.string.StringPromptTemplate
    
Functions
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: prompts
    :template: function.rst

    prompts.base.format_document
    prompts.loading.load_prompt
    prompts.loading.load_prompt_from_config
    prompts.string.check_valid_template
    prompts.string.get_template_variables
    prompts.string.jinja2_formatter
    prompts.string.validate_jinja2

:mod:`langchain_core.retrievers`
=================================

.. automodule:: langchain_core.retrievers
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: retrievers
    :template: pydantic.rst
    
    retrievers.BaseRetriever
    
:mod:`langchain_core.runnables`
================================

.. automodule:: langchain_core.runnables
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: runnables
    :template: class.rst
    
    runnables.base.Runnable
    
    :template: pydantic.rst
    
    runnables.base.RunnableBinding
    
    :template: pydantic.rst
    
    runnables.base.RunnableBindingBase
    
    :template: pydantic.rst
    
    runnables.base.RunnableEach
    
    :template: pydantic.rst
    
    runnables.base.RunnableEachBase
    
    :template: class.rst
    
    runnables.base.RunnableGenerator
    
    :template: class.rst
    
    runnables.base.RunnableLambda
    
    :template: pydantic.rst
    
    runnables.base.RunnableMap
    
    :template: pydantic.rst
    
    runnables.base.RunnableParallel
    
    :template: pydantic.rst
    
    runnables.base.RunnableSequence
    
    :template: pydantic.rst
    
    runnables.base.RunnableSerializable
    
    :template: pydantic.rst
    
    runnables.branch.RunnableBranch
    
    :template: class.rst
    
    runnables.config.EmptyDict
    
    :template: class.rst
    
    runnables.config.RunnableConfig
    
    :template: pydantic.rst
    
    runnables.configurable.DynamicRunnable
    
    :template: pydantic.rst
    
    runnables.configurable.RunnableConfigurableAlternatives
    
    :template: pydantic.rst
    
    runnables.configurable.RunnableConfigurableFields
    
    :template: enum.rst
    
    runnables.configurable.StrEnum
    
    :template: pydantic.rst
    
    runnables.fallbacks.RunnableWithFallbacks
    
    :template: pydantic.rst
    
    runnables.history.RunnableWithMessageHistory
    
    :template: pydantic.rst
    
    runnables.passthrough.RunnableAssign
    
    :template: pydantic.rst
    
    runnables.passthrough.RunnablePassthrough
    
    :template: pydantic.rst
    
    runnables.retry.RunnableRetry
    
    :template: class.rst
    
    runnables.router.RouterInput
    
    :template: pydantic.rst
    
    runnables.router.RouterRunnable
    
    :template: class.rst
    
    runnables.utils.AddableDict
    
    :template: class.rst
    
    runnables.utils.ConfigurableField
    
    :template: class.rst
    
    runnables.utils.ConfigurableFieldMultiOption
    
    :template: class.rst
    
    runnables.utils.ConfigurableFieldSingleOption
    
    :template: class.rst
    
    runnables.utils.ConfigurableFieldSpec
    
    :template: class.rst
    
    runnables.utils.GetLambdaSource
    
    :template: class.rst
    
    runnables.utils.IsFunctionArgDict
    
    :template: class.rst
    
    runnables.utils.IsLocalDict
    
    :template: class.rst
    
    runnables.utils.SupportsAdd
    
Functions
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: runnables
    :template: function.rst

    runnables.base.coerce_to_runnable
    runnables.config.acall_func_with_variable_args
    runnables.config.call_func_with_variable_args
    runnables.config.ensure_config
    runnables.config.get_async_callback_manager_for_config
    runnables.config.get_callback_manager_for_config
    runnables.config.get_config_list
    runnables.config.get_executor_for_config
    runnables.config.merge_configs
    runnables.config.patch_config
    runnables.configurable.make_options_spec
    runnables.configurable.prefix_config_spec
    runnables.passthrough.aidentity
    runnables.passthrough.identity
    runnables.utils.aadd
    runnables.utils.accepts_config
    runnables.utils.accepts_run_manager
    runnables.utils.add
    runnables.utils.gated_coro
    runnables.utils.gather_with_concurrency
    runnables.utils.get_function_first_arg_dict_keys
    runnables.utils.get_lambda_source
    runnables.utils.get_unique_config_specs
    runnables.utils.indent_lines_after_first

:mod:`langchain_core.stores`
=============================

.. automodule:: langchain_core.stores
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: stores
    :template: class.rst
    
    stores.BaseStore
    
:mod:`langchain_core.tools`
============================

.. automodule:: langchain_core.tools
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: tools
    :template: pydantic.rst
    
    tools.BaseTool
    
    :template: class.rst
    
    tools.SchemaAnnotationError
    
    :template: pydantic.rst
    
    tools.StructuredTool
    
    :template: pydantic.rst
    
    tools.Tool
    
    :template: class.rst
    
    tools.ToolException
    
Functions
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: tools
    :template: function.rst

    tools.create_schema_from_function
    tools.tool

:mod:`langchain_core.tracers`
==============================

.. automodule:: langchain_core.tracers
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: tracers
    :template: class.rst
    
    tracers.base.BaseTracer
    
    :template: class.rst
    
    tracers.evaluation.EvaluatorCallbackHandler
    
    :template: class.rst
    
    tracers.langchain.LangChainTracer
    
    :template: class.rst
    
    tracers.langchain_v1.LangChainTracerV1
    
    :template: typeddict.rst
    
    tracers.log_stream.LogEntry
    
    :template: class.rst
    
    tracers.log_stream.LogStreamCallbackHandler
    
    :template: class.rst
    
    tracers.log_stream.RunLog
    
    :template: class.rst
    
    tracers.log_stream.RunLogPatch
    
    :template: typeddict.rst
    
    tracers.log_stream.RunState
    
    :template: class.rst
    
    tracers.root_listeners.RootListenersTracer
    
    :template: class.rst
    
    tracers.run_collector.RunCollectorCallbackHandler
    
    :template: pydantic.rst
    
    tracers.schemas.BaseRun
    
    :template: pydantic.rst
    
    tracers.schemas.ChainRun
    
    :template: pydantic.rst
    
    tracers.schemas.LLMRun
    
    :template: pydantic.rst
    
    tracers.schemas.Run
    
    :template: pydantic.rst
    
    tracers.schemas.ToolRun
    
    :template: pydantic.rst
    
    tracers.schemas.TracerSession
    
    :template: pydantic.rst
    
    tracers.schemas.TracerSessionBase
    
    :template: pydantic.rst
    
    tracers.schemas.TracerSessionV1
    
    :template: pydantic.rst
    
    tracers.schemas.TracerSessionV1Base
    
    :template: pydantic.rst
    
    tracers.schemas.TracerSessionV1Create
    
    :template: class.rst
    
    tracers.stdout.ConsoleCallbackHandler
    
    :template: class.rst
    
    tracers.stdout.FunctionCallbackHandler
    
Functions
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: tracers
    :template: function.rst

    tracers.context.collect_runs
    tracers.context.register_configure_hook
    tracers.context.tracing_enabled
    tracers.context.tracing_v2_enabled
    tracers.evaluation.wait_for_all_evaluators
    tracers.langchain.get_client
    tracers.langchain.log_error_once
    tracers.langchain.wait_for_all_tracers
    tracers.langchain_v1.get_headers
    tracers.schemas.RunTypeEnum
    tracers.stdout.elapsed
    tracers.stdout.try_json_stringify

:mod:`langchain_core.utils`
============================

.. automodule:: langchain_core.utils
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: utils
    :template: class.rst
    
    utils.aiter.NoLock
    
    :template: class.rst
    
    utils.aiter.Tee
    
    :template: class.rst
    
    utils.aiter.atee
    
    :template: class.rst
    
    utils.formatting.StrictFormatter
    
    :template: class.rst
    
    utils.iter.NoLock
    
    :template: class.rst
    
    utils.iter.Tee
    
    :template: class.rst
    
    utils.iter.safetee
    
Functions
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: utils
    :template: function.rst

    utils.aiter.py_anext
    utils.aiter.tee_peer
    utils.env.env_var_is_set
    utils.env.get_from_dict_or_env
    utils.env.get_from_env
    utils.html.extract_sub_links
    utils.html.find_all_links
    utils.input.get_bolded_text
    utils.input.get_color_mapping
    utils.input.get_colored_text
    utils.input.print_text
    utils.iter.batch_iterate
    utils.iter.tee_peer
    utils.json_schema.dereference_refs
    utils.loading.try_load_from_hub
    utils.pydantic.get_pydantic_major_version
    utils.strings.comma_list
    utils.strings.stringify_dict
    utils.strings.stringify_value
    utils.utils.build_extra_kwargs
    utils.utils.check_package_version
    utils.utils.convert_to_secret_str
    utils.utils.get_pydantic_field_names
    utils.utils.guard_import
    utils.utils.mock_now
    utils.utils.raise_for_status_with_text
    utils.utils.xor_args

:mod:`langchain_core.vectorstores`
===================================

.. automodule:: langchain_core.vectorstores
    :no-members:
    :no-inherited-members:

Classes
--------------
.. currentmodule:: langchain_core

.. autosummary::
    :toctree: vectorstores
    :template: class.rst
    
    vectorstores.VectorStore
    
    :template: pydantic.rst
    
    vectorstores.VectorStoreRetriever
    
